2009-02-28  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	Bug 573488 – Small bug in Filter>Distorts>Ripple

	* plug-ins/common/ripple.c (ripple_vertical): fixed bug spotted in
	SMEAR mode, pointed out by Andreas Groth.

2009-02-22  Sven Neumann  <sven@gimp.org>

	* app/actions/image-actions.c: reverted last change. No changes in
	the stable branch without commit approval. And definitely no
	string changes.

2009-02-22  Marco Ciampa  <ciampix@libero.it>

	* app/actions/image-actions.c: fixed duplicated keyboard shortcut

2009-02-20  Michael Natterer  <mitch@gimp.org>

	Merged from trunk:

	Bug 572156 – top left pixel position/coordinate is not 0,0 but 1,1

	* app/display/gimpstatusbar.c
	(gimp_statusbar_push_coords)
	(gimp_statusbar_update_cursor): fix braino for
	GIMP_CURSOR_PRECISION_PIXEL_CENTER: going to the pixel's
	center doesn't need any rounding, it simply needs clipping
	away the coordinates' fractional parts, gah...

	Review all tools' cursor precision:

	* app/tools/gimpblendtool.c (gimp_blend_tool_init): set cursor
	precision to SUBPIXEL.

	* app/tools/gimptexttool.c (gimp_text_tool_init)
	* app/tools/gimpmeasuretool.c (gimp_measure_tool_init)
	* app/tools/gimpeditselectiontool.c (gimp_edit_selection_tool_init):
	set cursor precision to PIXEL_BORDER.

2009-02-18  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	Bug 472644 – Rotate with clipping crops the whole layer

	* app/core/gimp-transform-resize.c: applied patch as attached to
	bug #472644. Supposedly fixes the problem of the disappearing
	image.

2009-02-15  Sven Neumann  <sven@gimp.org>

	* configure.in: bumped version to 2.6.6 (interface age 6).

2009-02-15  Sven Neumann  <sven@gimp.org>

	* Made 2.6.5 release.

2009-02-13  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	Bug 571628 – Scaling image to 25% turn background from white to grey

	* app/paint-funcs/scale-region.c (pixel_average2): fixed right-shift
	for GRAYA pixels.

2009-02-12  Michael Natterer  <mitch@gimp.org>
