@@ -23,7 +23,7 @@
 
 #include <gegl.h>
 
-#include "gegl-types.h"
+#include "gimp-gegl-types.h"
 
 #include "base/tile.h"
 
