@@ -26,7 +26,7 @@
 #include "libgimpmath/gimpmath.h"
 #include "libgimpconfig/gimpconfig.h"
 
-#include "gegl-types.h"
+#include "gimp-gegl-types.h"
 
 #include "gimpbrightnesscontrastconfig.h"
 #include "gimplevelsconfig.h"
