@@ -27,7 +27,7 @@
 #include "libgimpmath/gimpmath.h"
 #include "libgimpconfig/gimpconfig.h"
 
-#include "gegl-types.h"
+#include "gimp-gegl-types.h"
 
 /*  temp cruft  */
 #include "base/color-balance.h"
