@@ -25,7 +25,7 @@
 
 #include "libgimpconfig/gimpconfig.h"
 
-#include "gegl-types.h"
+#include "gimp-gegl-types.h"
 
 #include "gimpposterizeconfig.h"
 
